deploy/manifests/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: example
