deploy/manifests/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  ingressClassName: nginx
  rules:
    - host: example.c02.asg.oci.raftel.tk
      http:
        paths:
          - backend:
              service:
                name: example
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - example.c02.asg.oci.raftel.tk
      secretName: wildcard-c02-asg-oci-raftel-tk
